--- a/config/MODNet_config.yaml
+++ b/config/MODNet_config.yaml
@@ -1,17 +1,19 @@
 loader_mode: P3MP
 use_user_map: false
-gpu: '0'
-backbone: mobilenetv2_human #mobilenetv2_human
+fusion: false
+inter_num: 1
+gpu: '2,3'
+backbone: mobilenetv2 #mobilenetv2_human
 data_set: P3M
-save_file: 1
+save_file: 2
 img_size: 512
 crop_size: 512
-batch_size: 16
+batch_size: 8
 num_worker: 8
 pretrain_path: ''
 lr: 0.0005
 weight: 0.0005
-port: 23549
+port: 23550
 epoch: 100
 aug_mixup: false
 aug_shadow: true
@@ -23,7 +25,6 @@ in_channels: 3
 hr_channels: 32
 warmup_step: 5
 amp: true
-fusion: false
 
 rssn_denoise: false
 bgPath_denoise: ''
@@ -31,12 +32,12 @@ fgPath_denoise: ''
 
 val_size: 1600
 
-im_path: /hy-tmp/P3M-10k/train/blurred_image/
+im_path: /data/yao/wjw/P3M/P3M-10k/train/blurred_image/
 fg_path: ''
 bg_path: ''
-gt_path: /hy-tmp/P3M-10k/train/mask/
-val_img_path: /hy-tmp/P3M-10k/validation/P3M-500-P/blurred_image/
-val_gt_path: /hy-tmp/P3M-10k/validation/P3M-500-P/mask/
+gt_path: /data/yao/wjw/P3M/P3M-10k/train/mask/
+val_img_path: /data/yao/wjw/P3M/P3M-10k/validation/P3M-500-P/blurred_image/
+val_gt_path: /data/yao/wjw/P3M/P3M-10k/validation/P3M-500-P/mask/
 trimap_path: ''
-show_img_path: /hy-tmp/P3M-10k/validation/P3M-500-P/blurred_image/
-show_gt_path: /hy-tmp/P3M-10k/validation/P3M-500-P/mask/
+show_img_path: /data/yao/wjw/P3M/P3M-10k/validation/P3M-500-P/blurred_image/
+show_gt_path: /data/yao/wjw/P3M/P3M-10k/validation/P3M-500-P/mask/
